Carrera de Inteligencia Artificial/Curso de Python/Dictionary comprehesion
Last login: Mon Jan 22 20:57:12 on ttys000
You have new mail.
MacBook-Pro-de-Lucas:~ lucasdaje$ python 
Python 2.7.10 (default, Jul 15 2017, 17:16:57) 
[GCC 4.2.1 Compatible Apple LLVM 9.0.0 (clang-900.0.31)] on darwin
Type "help", "copyright", "credits" or "license" for more information.
>>> 
>>> pares = []
>>> for num in range(1, 31):
...     if num % 2 == 0:
...             pares,append(num)
... 
Traceback (most recent call last):
  File "<stdin>", line 3, in <module>
NameError: name 'append' is not defined
>>> exit()
MacBook-Pro-de-Lucas:~ lucasdaje$ clear






























MacBook-Pro-de-Lucas:~ lucasdaje$ python 
Python 2.7.10 (default, Jul 15 2017, 17:16:57) 
[GCC 4.2.1 Compatible Apple LLVM 9.0.0 (clang-900.0.31)] on darwin
Type "help", "copyright", "credits" or "license" for more information.
>>> pares = []
>>> for num in range(1, 31): 
...     if num % 2 == 0:
...             pares.append(num)
... 
>>> pares 
[2, 4, 6, 8, 10, 12, 14, 16, 18, 20, 22, 24, 26, 28, 30]
>>> numeros = []
>>> for num in range(1, 31):
...     
... 
  File "<stdin>", line 3
    
    ^
IndentationError: expected an indented block
>>> exit()
MacBook-Pro-de-Lucas:~ lucasdaje$ clear


























MacBook-Pro-de-Lucas:~ lucasdaje$ python 
Python 2.7.10 (default, Jul 15 2017, 17:16:57) 
[GCC 4.2.1 Compatible Apple LLVM 9.0.0 (clang-900.0.31)] on darwin
Type "help", "copyright", "credits" or "license" for more information.
>>> pares = []
>>> >>> for num in range(1, 31): 
  File "<stdin>", line 1
    >>> for num in range(1, 31): 
     ^
SyntaxError: invalid syntax
>>> ...     if num % 2 == 0:
  File "<stdin>", line 1
    ...     if num % 2 == 0:
    ^
SyntaxError: invalid syntax
>>> ...             pares.append(num)
  File "<stdin>", line 1
    ...             pares.append(num)
    ^
SyntaxError: invalid syntax
>>> ... 
  File "<stdin>", line 1
    ... 
    ^
SyntaxError: invalid syntax
>>> >>> pares 
  File "<stdin>", line 1
    >>> pares 
     ^
SyntaxError: invalid syntax
>>> [2, 4, 6, 8, 10, 12, 14, 16, 18, 20, 22, 24, 26, 28, 30]exit
  File "<stdin>", line 1
    [2, 4, 6, 8, 10, 12, 14, 16, 18, 20, 22, 24, 26, 28, 30]exit
                                                               ^
SyntaxError: invalid syntax
>>> exit()
MacBook-Pro-de-Lucas:~ lucasdaje$ clear










MacBook-Pro-de-Lucas:~ lucasdaje$ python 
Python 2.7.10 (default, Jul 15 2017, 17:16:57) 
[GCC 4.2.1 Compatible Apple LLVM 9.0.0 (clang-900.0.31)] on darwin
Type "help", "copyright", "credits" or "license" for more information.
>>> pares= []
>>> for num in range(1, 31):
...     if num % 2 == 0 
  File "<stdin>", line 2
    if num % 2 == 0 
                   ^
SyntaxError: invalid syntax
>>> exit()
MacBook-Pro-de-Lucas:~ lucasdaje$ clear


































MacBook-Pro-de-Lucas:~ lucasdaje$ python 
Python 2.7.10 (default, Jul 15 2017, 17:16:57) 
[GCC 4.2.1 Compatible Apple LLVM 9.0.0 (clang-900.0.31)] on darwin
Type "help", "copyright", "credits" or "license" for more information.
>>> pares = [] 
>>> for num in range(1, 31):
...     if num % 2 == 0: 
... 
  File "<stdin>", line 3
    
    ^
IndentationError: expected an indented block
>>> exit()
MacBook-Pro-de-Lucas:~ lucasdaje$ clear

































MacBook-Pro-de-Lucas:~ lucasdaje$ python 
Python 2.7.10 (default, Jul 15 2017, 17:16:57) 
[GCC 4.2.1 Compatible Apple LLVM 9.0.0 (clang-900.0.31)] on darwin
Type "help", "copyright", "credits" or "license" for more information.
>>> numeros = []
>>> for num in range(1, 31):
...     if num % 1 == 0:
...             numeros.append(num)
... 
>>> numeros 
[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30]
>>> exit()
MacBook-Pro-de-Lucas:~ lucasdaje$ clear


































MacBook-Pro-de-Lucas:~ lucasdaje$ python 
Python 2.7.10 (default, Jul 15 2017, 17:16:57) 
[GCC 4.2.1 Compatible Apple LLVM 9.0.0 (clang-900.0.31)] on darwin
Type "help", "copyright", "credits" or "license" for more information.
>>> 
>>> pares = [] 
>>> for num in range(1, 31):
...     if num % 2 == 0:
... 
  File "<stdin>", line 3
    
    ^
IndentationError: expected an indented block
>>> exit()
MacBook-Pro-de-Lucas:~ lucasdaje$ clear
































MacBook-Pro-de-Lucas:~ lucasdaje$ python 
Python 2.7.10 (default, Jul 15 2017, 17:16:57) 
[GCC 4.2.1 Compatible Apple LLVM 9.0.0 (clang-900.0.31)] on darwin
Type "help", "copyright", "credits" or "license" for more information.
>>> pares = []
>>> for num in range(1, 31): 
...     if num % 2 == 2:
...             numeros.append(num)
... 
>>> pares 
[]
>>> exit()
MacBook-Pro-de-Lucas:~ lucasdaje$ clear


































MacBook-Pro-de-Lucas:~ lucasdaje$ python 
Python 2.7.10 (default, Jul 15 2017, 17:16:57) 
[GCC 4.2.1 Compatible Apple LLVM 9.0.0 (clang-900.0.31)] on darwin
Type "help", "copyright", "credits" or "license" for more information.
>>> 
>>> pares = []
>>> for num in range(1, 31):
...     if num % 2 == 0: 
...             pares.append(num)
... 
>>> pares
[2, 4, 6, 8, 10, 12, 14, 16, 18, 20, 22, 24, 26, 28, 30]
>>> range(1, 31)
[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30]
>>> 
>>> even = []
>>> even = [num for num in range(1, 31) if num % 2 == 0]
>>> even 
[2, 4, 6, 8, 10, 12, 14, 16, 18, 20, 22, 24, 26, 28, 30]
>>> 
>>> exit()
MacBook-Pro-de-Lucas:~ lucasdaje$ clear

























MacBook-Pro-de-Lucas:~ lucasdaje$ python 
Python 2.7.10 (default, Jul 15 2017, 17:16:57) 
[GCC 4.2.1 Compatible Apple LLVM 9.0.0 (clang-900.0.31)] on darwin
Type "help", "copyright", "credits" or "license" for more information.
>>> 
>>> cuadrados = {}
>>> 
>>> for num in range(1, 31): 
... for num in range(1, 11):
  File "<stdin>", line 2
    for num in range(1, 11):
      ^
IndentationError: expected an indented block
>>> exit()
MacBook-Pro-de-Lucas:~ lucasdaje$ clear
































MacBook-Pro-de-Lucas:~ lucasdaje$ python 
Python 2.7.10 (default, Jul 15 2017, 17:16:57) 
[GCC 4.2.1 Compatible Apple LLVM 9.0.0 (clang-900.0.31)] on darwin
Type "help", "copyright", "credits" or "license" for more information.
>>> pares = []
>>> for num in range(1, 31):
...     if num % 2 == 0:
...             pares.append(num)
... 
>>> pares
[2, 4, 6, 8, 10, 12, 14, 16, 18, 20, 22, 24, 26, 28, 30]
>>> 
>>> pares = [for num in range(1, 31): if num % 2 == 0]
  File "<stdin>", line 1
    pares = [for num in range(1, 31): if num % 2 == 0]
               ^
SyntaxError: invalid syntax
>>> exit()
MacBook-Pro-de-Lucas:~ lucasdaje$ clear




























MacBook-Pro-de-Lucas:~ lucasdaje$ python 
Python 2.7.10 (default, Jul 15 2017, 17:16:57) 
[GCC 4.2.1 Compatible Apple LLVM 9.0.0 (clang-900.0.31)] on darwin
Type "help", "copyright", "credits" or "license" for more information.
>>> pares = [] 
>>> for num in range(1, 31):
...     if num % 2 == 0:
...             pares.append(num)
... 
>>> pares
[2, 4, 6, 8, 10, 12, 14, 16, 18, 20, 22, 24, 26, 28, 30]
>>> pares = [for num in range(1, 31) if num % 2 == 0]
  File "<stdin>", line 1
    pares = [for num in range(1, 31) if num % 2 == 0]
               ^
SyntaxError: invalid syntax
>>> exit()
MacBook-Pro-de-Lucas:~ lucasdaje$ clear





























MacBook-Pro-de-Lucas:~ lucasdaje$ python 
Python 2.7.10 (default, Jul 15 2017, 17:16:57) 
[GCC 4.2.1 Compatible Apple LLVM 9.0.0 (clang-900.0.31)] on darwin
Type "help", "copyright", "credits" or "license" for more information.
>>> pares = [for num in range(1, 31) if num % 2 == 0:]
  File "<stdin>", line 1
    pares = [for num in range(1, 31) if num % 2 == 0:]
               ^
SyntaxError: invalid syntax
>>> exit()
MacBook-Pro-de-Lucas:~ lucasdaje$ clear




































MacBook-Pro-de-Lucas:~ lucasdaje$ clear














































MacBook-Pro-de-Lucas:~ lucasdaje$ python 
Python 2.7.10 (default, Jul 15 2017, 17:16:57) 
[GCC 4.2.1 Compatible Apple LLVM 9.0.0 (clang-900.0.31)] on darwin
Type "help", "copyright", "credits" or "license" for more information.
>>> pares = [num for num in range(1, 31) if num % 2 == 0]
>>> pares 
[2, 4, 6, 8, 10, 12, 14, 16, 18, 20, 22, 24, 26, 28, 30]
>>> 







































